2011-03-03  Martin Robinson  <mrobinson@igalia.com>

        Unskipped one test that just needs platform-independent results (it
        does not fail on GTK+) and one failure so that we can get a test diff
        from it (not failing locally or when run manually on the bots).

2011-03-03  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip failing test on GTK.

        * platform/gtk/Skipped: Skip fast/canvas/rgba-parsing.html

2011-03-03  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, GTK baselines for new tests.

        * platform/gtk/fast/block/positioning/differing-writing-modes-expected.checksum: Added.
        * platform/gtk/fast/block/positioning/differing-writing-modes-expected.png: Added.
        * platform/gtk/fast/block/positioning/differing-writing-modes-expected.txt: Added.
        * platform/gtk/fast/block/positioning/differing-writing-modes-replaced-expected.checksum: Added.
        * platform/gtk/fast/block/positioning/differing-writing-modes-replaced-expected.png: Added.
        * platform/gtk/fast/block/positioning/differing-writing-modes-replaced-expected.txt: Added.
        * platform/gtk/fast/replaced/vertical-lr/absolute-position-percentage-width-expected.checksum: Added.
        * platform/gtk/fast/replaced/vertical-lr/absolute-position-percentage-width-expected.png: Added.
        * platform/gtk/fast/replaced/vertical-lr/absolute-position-percentage-width-expected.txt: Added.
        * platform/gtk/fast/replaced/vertical-lr/absolute-position-with-auto-height-and-top-and-bottom-expected.checksum: Added.
        * platform/gtk/fast/replaced/vertical-lr/absolute-position-with-auto-height-and-top-and-bottom-expected.png: Added.
        * platform/gtk/fast/replaced/vertical-lr/absolute-position-with-auto-height-and-top-and-bottom-expected.txt: Added.
        * platform/gtk/fast/replaced/vertical-lr/absolute-position-with-auto-width-and-left-and-right-expected.checksum: Added.